--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <section class="simulation">
       <canvas id="playfield" width="960" height="540" aria-label="평행주차 연습 화면"></canvas>
 
+
       <!-- 게임 시작/실패 오버레이 -->
       <div id="game-overlay" class="game-overlay">
         <div class="overlay-content">
@@ -60,7 +61,7 @@
     </div>
 
     <div class="controls-info">
-      <p>💡 <strong>조작법:</strong> 화살표 키 또는 WASD로 차량을 조작하세요. 터치스크린에서는 화면을 터치하고 드래그하거나 위의 버튼을 사용하여 운전하세요.</p>
+      <p>💡 <strong>조작법:</strong> 화살표 키 또는 WASD로 차량을 조작하세요. 터치스크린에서는 화면을 터치하고 드래그하거나 하단 버튼을 사용하여 운전하세요. 자동차 가운데 빨간 정지 버튼을 터치해서 즉시 정지할 수도 있습니다.</p>
     </div>
 
     <section class="parking-order">
