--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>주차연습 시뮬레이터</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header>
     <h1>주차연습 시뮬레이터</h1>
@@ -100,7 +102,8 @@
     </div>
 
     <div class="controls-info">
-      <p>💡 <strong>조작법:</strong> 화살표 키 또는 WASD로 차량을 조작하세요. 터치스크린에서는 화면을 터치하고 드래그하거나 하단 버튼을 사용하여 운전하세요. 자동차 가운데 빨간 정지 버튼을 터치해서 즉시 정지할 수도 있습니다.</p>
+      <p>💡 <strong>조작법:</strong> 화살표 키 또는 WASD로 차량을 조작하세요. 터치스크린에서는 화면을 터치하고 드래그하거나 하단 버튼을 사용하여 운전하세요. 자동차 가운데 빨간 정지
+        버튼을 터치해서 즉시 정지할 수도 있습니다.</p>
     </div>
 
     <section class="parking-order">
@@ -135,7 +138,8 @@
           </div>
         </div>
       </div>
-      <p class="order-note">💡 번호가 <span class="red-text">빨간색</span>에서 <span class="green-text">초록색</span>으로 바뀌면 주차 완료!</p>
+      <p class="order-note">💡 번호가 <span class="red-text">빨간색</span>에서 <span class="green-text">초록색</span>으로 바뀌면 주차 완료!
+      </p>
     </section>
 
     <!-- HUD 정보 섹션들 -->
@@ -195,4 +199,5 @@
   </footer>
   <script src="script.js?v=4" defer></script>
 </body>
+
 </html>
