--- a/stage2_index.html
+++ b/stage2_index.html
@@ -4,28 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>주차연습 시뮬레이터</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>주행연습 시뮬레이터 - 2단계</title>
+  <link rel="stylesheet" href="stage2_styles.css" />
 </head>
 
 <body>
   <header>
-    <h1>주차연습 시뮬레이터 - 1단계</h1>
+    <h1>주행연습 시뮬레이터 - 2단계</h1>
     <nav class="stage-nav">
-      <span class="stage-current">1단계: 주차연습</span>
-      <a href="stage2_index.html" class="stage-link">2단계: 주행연습</a>
+      <a href="index.html" class="stage-link">1단계: 주차연습</a>
+      <span class="stage-current">2단계: 주행연습</span>
     </nav>
   </header>
+
   <main>
     <section class="simulation">
-      <canvas id="playfield" width="960" height="540" aria-label="평행주차 연습 화면"></canvas>
-
+      <canvas id="playfield" width="960" height="540" aria-label="주행 연습 화면"></canvas>
 
       <!-- 게임 시작/실패 오버레이 -->
       <div id="game-overlay" class="game-overlay">
         <div class="overlay-content">
-          <h2 id="overlay-title">주차연습 시뮬레이터</h2>
-          <p id="overlay-message">시작 버튼을 눌러 주차 연습을 시작하세요</p>
+          <h2 id="overlay-title">주행연습 시뮬레이터</h2>
+          <p id="overlay-message">시작 버튼을 눌러 주행 연습을 시작하세요</p>
           <button id="start-game-btn" class="start-btn">게임 시작</button>
         </div>
       </div>
@@ -36,16 +36,16 @@
       <!-- 왼쪽 도전 버튼 그룹 -->
       <div class="challenge-left-side">
         <div class="challenge-item">
-          <button id="challenge-1" class="challenge-btn" data-area="1">1번</button>
-          <div class="time-record" id="time-record-1">--</div>
+          <button id="challenge-outer" class="challenge-btn active" data-course="outer">주행1</button>
+          <div class="time-record" id="time-record-outer">--</div>
         </div>
         <div class="challenge-item">
-          <button id="challenge-2" class="challenge-btn" data-area="2">2번</button>
-          <div class="time-record" id="time-record-2">--</div>
+          <button id="challenge-outer2" class="challenge-btn" data-course="outer2">주행2</button>
+          <div class="time-record" id="time-record-outer2">--</div>
         </div>
       </div>
 
-      <!-- 기존 컨트롤 패드 (변경하지 않음) -->
+      <!-- 기존 컨트롤 패드 -->
       <div class="mobile-control-pad">
         <div class="control-pad-container">
           <!-- 다시시작 버튼 -->
@@ -83,15 +83,15 @@
       <!-- 오른쪽 도전 버튼 그룹 -->
       <div class="challenge-right-side">
         <div class="challenge-item">
-          <button id="challenge-3" class="challenge-btn" data-area="3">3번</button>
-          <div class="time-record" id="time-record-3">--</div>
+          <button id="challenge-s" class="challenge-btn" data-course="s">S라인</button>
+          <div class="time-record" id="time-record-s">--</div>
         </div>
         <div class="challenge-item">
-          <button id="challenge-4" class="challenge-btn" data-area="4">4번</button>
-          <div class="time-record" id="time-record-4">--</div>
+          <button id="challenge-s2" class="challenge-btn" data-course="s2">S라인2</button>
+          <div class="time-record" id="time-record-s2">--</div>
         </div>
         <div class="challenge-item">
-          <button id="challenge-all" class="challenge-btn active" data-area="all">시간</button>
+          <button id="challenge-all" class="challenge-btn" data-course="all">전체</button>
           <div class="time-record all-record" id="time-record-all">--</div>
         </div>
       </div>
@@ -100,50 +100,41 @@
     <!-- 성공 메시지 오버레이 -->
     <div id="success-overlay" class="success-overlay hidden">
       <div class="success-content">
-        <h2 id="success-title">🎉 주차 성공!</h2>
+        <h2 id="success-title">🎉 코스 완주!</h2>
         <p id="success-time">시간: 0.0초</p>
       </div>
     </div>
 
     <div class="controls-info">
-      <p>💡 <strong>조작법:</strong> 화살표 키 또는 WASD로 차량을 조작하세요. 터치스크린에서는 화면을 터치하고 드래그하거나 하단 버튼을 사용하여 운전하세요. 자동차 가운데 빨간 정지
-        버튼을 터치해서 즉시 정지할 수도 있습니다.</p>
+      <p>💡 <strong>조작법:</strong> 화살표 키 또는 WASD로 차량을 조작하세요. 터치스크린에서는 화면을 터치하고 드래그하거나 하단 버튼을 사용하여 운전하세요. 자동차 가운데 빨간 정지 버튼을 터치해서 즉시 정지할 수도 있습니다.</p>
     </div>
 
-    <section class="parking-order">
-      <h2>주차 연습 순서</h2>
+    <section class="course-order">
+      <h2>주행 연습 순서</h2>
       <div class="order-grid">
         <div class="order-item">
-          <span class="order-number red">1</span>
+          <span class="order-number blue">1</span>
           <div class="order-content">
-            <h3>T자 주차</h3>
-            <p>직진으로 수직 주차 연습 (기초 단계)</p>
+            <h3>외곽 트랙</h3>
+            <p>타원형 트랙 한 바퀴 완주 (기초 단계)</p>
           </div>
         </div>
         <div class="order-item">
-          <span class="order-number red">2</span>
+          <span class="order-number blue">2</span>
           <div class="order-content">
-            <h3>차선 이동 연습 1</h3>
-            <p>정확한 위치 감각 연습 (첫 번째 구역)</p>
+            <h3>S자 코스</h3>
+            <p>내부 S자 구간 완주 (고급 단계)</p>
           </div>
         </div>
         <div class="order-item">
-          <span class="order-number red">3</span>
+          <span class="order-number blue">3</span>
           <div class="order-content">
-            <h3>차선 이동 연습 2</h3>
-            <p>정확한 위치 감각 연습 (두 번째 구역)</p>
-          </div>
-        </div>
-        <div class="order-item">
-          <span class="order-number red">4</span>
-          <div class="order-content">
-            <h3>평행주차</h3>
-            <p>후진 주차 연습 (고급 단계)</p>
+            <h3>전체 코스</h3>
+            <p>외곽 + S자 연속 완주 (마스터 단계)</p>
           </div>
         </div>
       </div>
-      <p class="order-note">💡 번호가 <span class="red-text">빨간색</span>에서 <span class="green-text">초록색</span>으로 바뀌면 주차 완료!
-      </p>
+      <p class="order-note">💡 차선을 벗어나면 <span class="red-text">실패</span>, 완주하면 <span class="green-text">성공</span>!</p>
     </section>
 
     <!-- HUD 정보 섹션들 -->
@@ -151,57 +142,61 @@
       <div class="goal-info">
         <h2>🎯 목표</h2>
         <ol>
-          <li>흰색 차량을 노란 주차구역 완전히 안으로 주차하기</li>
-          <li>차체가 노란 라인에 닿지 않도록 정확하게 조절</li>
-          <li>정지 상태에서 주차 완료 (속도 0.5km/h 이하)</li>
+          <li>흰색 차량으로 코스를 완주하기</li>
+          <li>차선(노란선)을 벗어나지 않고 주행</li>
+          <li>가능한 빠른 시간에 완주하기</li>
         </ol>
       </div>
       <div class="tips">
-        <h2>📝 주차 가이드</h2>
+        <h2>📝 주행 가이드</h2>
         <ul>
           <li><strong>조작법:</strong> 화면 드래그 또는 하단 화살표 버튼 사용</li>
-          <li><strong>속도 주의:</strong> 15km/h 이상 시 감점, 안전하게 주차하세요</li>
-          <li><strong>기준선:</strong> 노란 점선을 차량 위치 기준으로 활용</li>
+          <li><strong>차선 준수:</strong> 노란 차선을 벗어나면 즉시 실패</li>
+          <li><strong>속도 조절:</strong> 커브 구간에서는 감속 필수</li>
           <li><strong>브레이크:</strong> 빠르게 정지하려면 브레이크 버튼 사용</li>
         </ul>
       </div>
     </aside>
 
     <section class="checklist">
-      <h2>✅ 주차 단계별 체크리스트</h2>
+      <h2>✅ 주행 단계별 체크리스트</h2>
       <div class="checklist-grid">
         <div class="checklist-item">
-          <h3>🎯 T자 주차 (1번)</h3>
+          <h3>🔵 외곽 트랙</h3>
           <ul>
-            <li>직진으로 진입</li>
-            <li>중앙 정렬 후 후진</li>
-            <li>박스 안에서 정지</li>
+            <li>출발선에서 출발</li>
+            <li>타원형 트랙 따라 주행</li>
+            <li>차선 유지하며 한 바퀴</li>
+            <li>출발선 통과로 완주</li>
           </ul>
         </div>
         <div class="checklist-item">
-          <h3>📍 차선 연습 (2-3번)</h3>
+          <h3>🔵 S자 코스</h3>
           <ul>
-            <li>정확한 위치 감각 연습</li>
-            <li>좌우 공간 균등 배치</li>
-            <li>단계별 정밀 주차</li>
+            <li>S자 진입구에서 출발</li>
+            <li>좌우 커브 연속 주행</li>
+            <li>차선 이탈 주의</li>
+            <li>출구 통과로 완주</li>
           </ul>
         </div>
         <div class="checklist-item">
-          <h3>🅿️ 평행주차 (4번)</h3>
+          <h3>🔵 전체 코스</h3>
           <ul>
-            <li>진입 전 기준점 정렬</li>
-            <li>후진 시 조향 45° 진입</li>
-            <li>중간 핸들 조정 후 정렬</li>
-            <li>최종 위치 조정 및 정지</li>
+            <li>외곽 트랙 완주</li>
+            <li>S자 진입</li>
+            <li>S자 완주</li>
+            <li>연속 주행 성공</li>
           </ul>
         </div>
       </div>
     </section>
   </main>
+
   <footer>
     <p>실제 도로 연습 전 가상의 공간에서 절차를 익히는 데 활용하세요.</p>
   </footer>
-  <script src="script.js?v=4" defer></script>
+
+  <script src="stage2_script.js?v=109" defer></script>
 </body>
 
 </html>
