--- a/stage2_index.html
+++ b/stage2_index.html
@@ -83,7 +83,7 @@
       <!-- 오른쪽 도전 버튼 그룹 -->
       <div class="challenge-right-side">
         <div class="challenge-item">
-          <button id="challenge-s" class="challenge-btn" data-course="s">S라인</button>
+          <button id="challenge-s" class="challenge-btn" data-course="s">S라인1</button>
           <div class="time-record" id="time-record-s">--</div>
         </div>
         <div class="challenge-item">
